--- a/planningbuddy/app/src/main/res/values/strings.xml
+++ b/planningbuddy/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="title_todo">To Do</string>
-    <string name="title_courses">Courses</string>
+    <string name="ToDoList">To Do List</string>
+    <string name="Assigments">Assigments</string>
+    <string name="Exams">Exams</string>
+    <string name="Courses">Courses</string>
+    <string name="add_task">Add Task</string>
+    <string name="add_course">Add Course</string>
+    <string name="enter_class_name">Enter Class Name</string>
 </resources>
