--- a/planningbuddy/app/src/main/res/values/strings.xml
+++ b/planningbuddy/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="enter_class_name">Enter Class Name</string>
     <string name="title_todo">TODO</string>
     <string name="title_courses">Courses</string>
+    <string-array name="sort_options">
+        <item>Sort by Course</item>
+        <item>Sort by Date</item>
+    </string-array>
 </resources>
